# document-intelligence-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_OPTIMIZATION_SUMMARY.md  FIX_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  SECURITY.md  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.optimized  README.md  docker-compose.optimized.yml  docker-compose.yml  prometheus.yml
docs/: ENTERPRISE_FEATURES.md  PROJECT_STRUCTURE.md
docs/adr/: 0001-use-fastapi-framework.md  0002-vector-database-selection.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: PERFORMANCE.md  kubernetes-deployment.md
docs/internal/: PROJECT_STRUCTURE.txt
scripts/: build_optimized.sh  health_check.py  init_models.py  verify_image_size.sh  verify_setup.sh
scripts/docker/: build_optimized.sh  debug_build.sh  test_optimized_build.sh
scripts/setup/: init_models.py
src/: __init__.py
src/api/: __init__.py  endpoints.py  examples.py  health.py  main.py
src/core/: __init__.py  chunking.py  config.py  embeddings.py  vector_store.py
src/monitoring/: __init__.py  metrics.py
src/rag/: __init__.py  generator.py  hybrid_search.py  reranker.py  retriever.py
tests/: conftest.py  test_api.py  test_core.py  test_integration.py  test_performance.py
(+1 files in other folders)
